# HydroponicsProject

./: .gitignore  CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  HydroponicsBox.vgdbproj  README.md  RotaryEncoder.cpp  RotaryEncoder.h  communication.cpp  communication.h  font.h  graphicLCD.cpp  hardwareSetup.h  main.cpp  sensors.h
.visualgdb/CodeDB/HydroponicsBox.vgdbproj-Debug-VisualGDB/: DisplayManager.npa00  DisplayManager.npd  DisplayManager.rdb  GlobalFileTable.000  GlobalFileTable.001  Menu.hpd  Menu.npd  Menu.rdb  RotaryEncoder.npa01  RotaryEncoder.npd  RotaryEncoder.rdb  button.npa00  codedb.lck  communication.npa00  communication.npd  communication.rdb  font.npa00  font.npd  font.rdb  graphicLCD.hpa00  graphicLCD.hpd  graphicLCD.npa00  graphicLCD.npd  graphicLCD.rdb  inputs.npd  inputs.rdb  main.npd  main.rdb  sensors.npa01  sensors.npd  sensors.rdb  splashPage.npd  splashPage.rdb  tmp00000001.npa00  tmp00000002.npa00  tmp00000003.npa00  tmp00000004.npa00  tmp00000005.npa00  tmp00000005.npa01  tmp00000007.npa01  (+24 more)
.visualgdb/CodeDB/HydroponicsBox.vgdbproj-Debug-VisualGDB.0001/: codedb.lck
.visualgdb/CodeDB/HydroponicsBox.vgdbproj-Debug-VisualGDB/GlobalCache/000/: Files.idx  Names.idx
.visualgdb/VisualGDBCache/HydroponicsBox-Debug-VisualGDB/: ImplicitCompilerFlags.xml  UpToDateChecklist.db
.visualgdb/VisualGDBCache/HydroponicsBox-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-ea4a8b4ba24deaa1a2b2.json  cmakeFiles-v1-132230e83c84ce6f21a4.json  codemodel-v2-281291c66bb72ebcb95f.json  index-2023-11-19T18-22-04-0511.json  target-HydroponicsBox-DEBUG-33a1d8cf68cfb47950d1.json  target-HydroponicsBox_rotaryEncoder_pio_h-DEBUG-bd330559c03c051e91e9.json  target-bs2_default-DEBUG-41d8100a4fa8a804c5ab.json  target-bs2_default_bin-DEBUG-fdc7ff31ea2d45fdba4c.json  target-bs2_default_padded_checksummed_asm-DEBUG-6d71c58c547c9294371e.json
docs/: Microcontroller-Server_Interface.md  Microcontroller-User_Actions.md  Microcontroller_operation.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  metrics.js  setupProxy.js  util.js
frontend/src/login/: loginPage.js  virtualFarm.js
frontend/src/settingsPage/: plantConfigurationSettings.js  settingsPage.js  settingsTextBox.js
frontend/src/viewPage/: metricBlock.js  overviewStats.js  plantHolder.js  plantHolderInfo.js  plantOverlay.js  viewPage.css  viewPage.js  waterOverlay.js
menus/: DisplayElement.h  Menu.cpp  Menu.h  splashPage.cpp  splashPage.h
microcontroller/: .gitignore  CMakeLists.txt  HydroponicsBox.sln  HydroponicsBox.vgdbproj  graphicLCD.cpp  graphicLCD.h  hardwareSetup.h  inputs.cpp  inputs.h  main.cpp  outputs.cpp  outputs.h  schedule.cpp  schedule.h  sensors.cpp  sensors.h  serverComm.cpp  serverComm.h
microcontroller/assets/: font.cpp
microcontroller/menus/: MainMenu.cpp  Menu.h  Menus.h  NavigationMenu.cpp  SensorMenu.cpp  SensorMenu.h  ecDryCalib.h  ecDryCalibMenu.cpp  ecHighCalib.h  ecHighCalibMenu.cpp  ecLowCalib.h  ecLowCalibMenu.cpp  ecSelectMenu.cpp  manualControlMenu.cpp  phCalibMenu.h  phCalibrationMenu.cpp  phHighCalibMenu.cpp  phHighCalibMenu.h  phLowCalibMenu.cpp  phLowCalibMenu.h  phMidCalibMenu.cpp  phSelectMenu.cpp  scheduleMenu.cpp  splashPage.cpp  splashPage.h
server/: config.yaml  dbInit.sql  go.mod  go.sum  main.go
server/api/: adjustments.go  auth.go  controls.go  data.go  futureState.go  plantConfig.go  routes.go  systemConfig.go
server/asynchronousactivities/: analysis.go  asyncCore.go
server/common/: config.go  database.go  logging.go  notifications.go  plantNeeds.go  structures.go
server/hardwarecomms/: commands.go  communication.go
